--- a/Localizer/nbproject/private/private.properties
+++ b/Localizer/nbproject/private/private.properties
@@ -1,2 +1,6 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Michael\\.netbeans\\7.1\\build.properties
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
+user.properties.file=/home/michael/.netbeans/7.1/build.properties
